<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInterface">

    <!-- TITULO PARA MOSTRAR LOS DATOS-->
    <TextView
        android:id="@+id/IdControl"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="2dp"
        android:text="@string/IdControl"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="79dp" />

    <!-- DATO ACTUAL MEDIDO)-->

    <!-- TEXT HISTORIAL(TITULO DEL SCROLL)-->

    <TextView
        android:id="@+id/IdBufferIn"
        android:layout_width="228dp"
        android:layout_height="77dp"
        android:layout_below="@+id/IdControl"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/pause"
        android:layout_toLeftOf="@+id/pause"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        android:visibility="visible" />

    <TextView
        android:id="@+id/IdbufferHistorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IdBufferIn"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="252dp"
        android:layout_marginRight="252dp"
        android:layout_marginBottom="1dp"
        android:text="@string/IdbufferHistorial"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- BUFFER DE HISTORIAL DE DATOS (SCROLL)-->
    <TextView
        android:id="@+id/Idbuffer"
        android:layout_width="200dp"
        android:layout_height="316dp"
        android:layout_below="@+id/IdbufferHistorial"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="91dp"
        android:contentDescription="@string/Buffer"
        android:scrollbars="vertical"
        android:textSize="15dp"
        android:textStyle="italic"
        android:typeface="normal"
        android:textColor="@android:color/black"
        android:visibility="visible"
        tools:visibility="visible" />

    <!-- BOTON PARA REINICIAR EL HISTORIAL-->
    <Button
        android:id="@+id/pause"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/IdControl"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="15dp"
        android:onClick="pause"
        android:text="@string/Pause" />

    <!-- BOTON PARA EXPORTAR LOS DATOS A UN ARCHIVO-->

    <Button
        android:id="@+id/reset"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pause"
        android:layout_alignStart="@+id/Idbuffer"
        android:layout_alignLeft="@+id/Idbuffer"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="252dp"
        android:layout_marginLeft="252dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="15dp"
        android:text="@string/Reset" />

    <Button
        android:id="@+id/save"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/Idload"
        android:layout_below="@+id/reset"
        android:layout_alignStart="@+id/Idbuffer"
        android:layout_alignLeft="@+id/Idbuffer"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="252dp"
        android:layout_marginLeft="252dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="15dp"
        android:onClick="Save"
        android:text="@string/Save" />

    <Button
        android:id="@+id/Idload"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/IdDesconectar"
        android:layout_alignStart="@+id/Idbuffer"
        android:layout_alignLeft="@+id/Idbuffer"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="252dp"
        android:layout_marginLeft="252dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="15dp"
        android:onClick="Load"
        android:text="@string/Load" />

    <!-- BOTON DE DESCONEXION DE BLUETOOTH-->
    <Button
        android:id="@+id/IdDesconectar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/IdDesconectar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        app:srcCompat="@drawable/logo_2" />

    <TextView
        android:id="@+id/ind_conexion"
        android:layout_width="167dp"
        android:layout_height="37dp"
        android:layout_above="@+id/pause"
        android:layout_below="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="73dp"
        android:layout_marginBottom="18dp"
        android:layout_toEndOf="@+id/IdControl"
        android:layout_toRightOf="@+id/IdControl"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:text="@string/conexion" />

</RelativeLayout>