<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLoad">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        app:srcCompat="@drawable/logo_2" />

    <TextView
        android:id="@+id/IdDatos"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="188dp"
        android:layout_marginBottom="2dp"
        android:text="@string/IdControl"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="79dp" />

    <TextView
        android:id="@+id/Idbufferload"
        android:layout_width="match_parent"
        android:layout_height="316dp"
        android:layout_above="@+id/IdVolver"
        android:layout_below="@+id/IdDatos"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/Buffer"
        android:paddingBottom="90pt"
        android:scrollbars="vertical"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        android:typeface="normal"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/IdVolver"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:onClick="Volver"
        android:text="@string/Return" />
</RelativeLayout>